my-jitsi/041-ingress.yaml

---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
  #  cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  #tls:
  #- hosts:
   # - jitsi.foo.com
 #   secretName: tls-jitsi
  rules:
  - host: jitsi.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
